--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <organization>
         <name>Jeremy Wall</name>
-        <url>https://www.jeremywall.dev</url>
+        <url>https://www.jeremywall.com</url>
     </organization>
 
     <issueManagement>
